PFP-7193 rest tjenste for å hente brevmaler (#91)